--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Momentum React App</title>
+    <title>React Social Card</title>
   </head>
   <body>
     <div id='app'></div>
